# sdl2_demo

./: .gitignore  CMakeLists.txt
src/: main.cpp
